# reforis-openvpn

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  MANIFEST.in  Makefile  README.md  babel.cfg  pycodestyle  pylintrc  pyproject.toml  setup.py
js/: .eslintrc.js  package-lock.json  package.json  webpack.config.js
js/src/: API.js  app.js
js/src/clientRegistration/: AddClientForm.js  ClientRegistration.js  ClientTable.js  Clients.js
js/src/clientRegistration/__tests__/: AddClientForm.test.js  ClientRegistration.test.js  ClientTable.test.js
js/src/clientSettings/: AddSettingsForm.js  ClientSettings.css  ClientSettings.js  SettingsTable.js
js/src/clientSettings/AvailableSettings/: AvailableSettings.js
js/src/clientSettings/__tests__/: AddSettingsForm.test.js  AvailableSettings.test.js  SettingsTable.test.js
js/src/openvpn/: AlertContext.js  AuthorityBeingGenerated.js  AuthorityMissing.js  AuthorityReady.js  AuthorityStatus.js  OpenVPN.js  ServerSettings.js
js/src/openvpn/__tests__/: AlertContext.test.js  AuthorityBeingGenerated.test.js  (+5 more)
js/src/serverSettings/: AuthorityBeingGenerated.js  AuthorityMissing.js  AuthorityReady.js  AuthorityStatus.js  ServerSettings.js  ServerSettingsForm.js
js/src/testUtils/: customTestRender.js  setup.js
reforis_openvpn/: __init__.py  utils.py
reforis_openvpn/translations/: messages.pot
reforis_static/: __init__.py
reforis_static/reforis_openvpn/: app.min.js
reforis_static/reforis_openvpn/js/: app.min.js
tests/: conftest.py  test_authority.py  test_client_settings.py  test_clients.py  test_server_settings.py  utils.py
(+57 files in other folders)
